--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,74 @@
 html {
   font-family: 'Jost', sans-serif;
 }
+
+.hero-banner {
+  border-radius: var(--blob-radius);
+  overflow: hidden;
+  animation: blobAnim 30s linear infinite;
+}
+
+@keyframes blobAnim {
+  0%,
+  100% {
+    border-radius: var(--blob-radius);
+  }
+
+  10% {
+    border-radius: 33% 67% 50% 50% / 43% 39% 61% 57%;
+  }
+
+  20% {
+    border-radius: 51% 49% 31% 69% / 65% 39% 61% 35%;
+  }
+
+  30% {
+    border-radius: 51% 49% 56% 44% / 45% 39% 61% 55%;
+  }
+
+  40% {
+    border-radius: 66% 34% 33% 67% / 48% 71% 39% 52%;
+  }
+
+  50% {
+    border-radius: 46% 54% 33% 67% / 48% 30% 70% 52%;
+  }
+
+  60% {
+    border-radius: 46% 54% 56% 44% / 48% 30% 70% 52%;
+  }
+
+  70% {
+    border-radius: 46% 54% 56% 44% / 65% 53% 47% 35%;
+  }
+
+  80% {
+    border-radius: 67% 33% 56% 44% / 37% 53% 47% 63%;
+  }
+
+  90% {
+    border-radius: 46% 54% 32% 68% / 37% 53% 47% 63%;
+  }
+}
+
+.hero-background:after {
+  content: '';
+  position: absolute;
+  top: -20%;
+  bottom: 50%;
+  left: 48%;
+  right: -15%;
+  background-color: #ffe4aa;
+  transform: rotate(-45deg);
+  border-radius: 50px;
+  z-index: -1;
+}
+
+@media (max-width: 575px) {
+  .hero-background:after {
+    top: -0%;
+    left: 10%;
+    bottom: 70%;
+    right: -75%;
+  }
+}
