--- a/src/index.css
+++ b/src/index.css
@@ -68,6 +68,10 @@ html {
   z-index: -1;
 }
 
+.container-swal {
+  padding: 20px;
+}
+
 @media (max-width: 575px) {
   .hero-background:after {
     top: -0%;
